# nbcat

./: README.md  example.ipynb  pyproject.toml
nbcat/: cli.py  notebook.py
tests/: test_nbcat.py
